# cmake-to-bazel

./: .gitignore  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md  cmake_analysis.md  go.mod  go.sum
bazel/: BUILD.bazel  MODULE.bazel  converted_pkg_repo.bzl
converter/testdata/sample-projects/alias-target/: CMakeLists.txt
converter/testdata/sample-projects/alias-target/include/: aliaslib.h
converter/testdata/sample-projects/alias-target/src/: aliaslib.c  demo.c
converter/testdata/sample-projects/codegen-target/: CMakeLists.txt
converter/testdata/sample-projects/codegen-target/scripts/: gen_version.py
converter/testdata/sample-projects/codegen-target/src/: codegen.c
converter/testdata/sample-projects/configure-file/: CMakeLists.txt
converter/testdata/sample-projects/configure-file/src/: cfglib.c  config.h.in
converter/testdata/sample-projects/find-package/: CMakeLists.txt
converter/testdata/sample-projects/find-package-static/: CMakeLists.txt  imports.json
converter/testdata/sample-projects/find-package-static/include/: usepkgst.h
converter/testdata/sample-projects/find-package-static/src/: usepkgst.c
converter/testdata/sample-projects/find-package/include/: usepkg.h
converter/testdata/sample-projects/find-package/src/: usepkg.c
converter/testdata/sample-projects/generator-expressions/: CMakeLists.txt
converter/testdata/sample-projects/generator-expressions/include/: genex.h
converter/testdata/sample-projects/generator-expressions/src/: genex.c
converter/testdata/sample-projects/hello-world/: CMakeLists.txt  hello.c
converter/testdata/sample-projects/hello-world/include/: hello.h
converter/testdata/sample-projects/interface-library/: CMakeLists.txt
converter/testdata/sample-projects/interface-library/include/iflib/: iflib.hpp
converter/testdata/sample-projects/interface-library/src/: demo.cpp
converter/testdata/sample-projects/macro-from-import/consumer/: CMakeLists.txt
converter/testdata/sample-projects/macro-from-import/consumer/include/: mfi.h
converter/testdata/sample-projects/macro-from-import/consumer/src/: mfi.c
converter/testdata/sample-projects/multi-language/: CMakeLists.txt
converter/testdata/sample-projects/multi-language/include/: multilang.h
converter/testdata/sample-projects/multi-language/src/: c_part.c  cxx_part.cpp
converter/testdata/sample-projects/multi-target/: CMakeLists.txt
converter/testdata/sample-projects/multi-target/include/: multi.h
converter/testdata/sample-projects/multi-target/src/: lib.c  main.c
converter/testdata/sample-projects/object-library/: CMakeLists.txt
converter/testdata/sample-projects/object-library/include/: objlib.h
converter/testdata/sample-projects/object-library/src/: a.c  b.c  main.c
converter/testdata/sample-projects/pkg-config/: CMakeLists.txt  imports.json
converter/testdata/sample-projects/pkg-config/include/: pcuser.h
converter/testdata/sample-projects/pkg-config/src/: pcuser.c
converter/testdata/sample-projects/subdir-library/: CMakeLists.txt
converter/testdata/sample-projects/subdir-library/include/: toplib.h  util.h
converter/testdata/sample-projects/subdir-library/src/: toplib.c
converter/testdata/sample-projects/subdir-library/src/util/: CMakeLists.txt  util.c
converter/testdata/sample-projects/visibility/: CMakeLists.txt
converter/testdata/sample-projects/visibility/include/: visi.h
converter/testdata/sample-projects/visibility/include/private/: internal.h
converter/testdata/sample-projects/visibility/src/: visi.c
converter/testdata/toolchain-probe/: CMakeLists.txt  probe.c  probe.cpp
docs/: architecture.md  build-structure.md  cmake-conversion-deltas.md  codegen-tags.md  failure-schema.md  fdsdk-coverage-status.md  fdsdk-element-survey.md  fdsdk-reality-check.md  fdsdk-whole-project-plan.md  fidelity-known-deltas.md  m1-plan.md  m3-plan.md  m4-plan.md  m5-plan.md  m5b-fidelity-plan.md  overview.md  sources-design.md  toolchain-derivation-plan.md  trace-driven-autotools.md  whole-project-plan.md
orchestrator/testdata/bazel-downstream/: BUILD.bazel  MODULE.bazel.tmpl
orchestrator/testdata/cmake-consumer/: CMakeLists.txt
orchestrator/testdata/fdsdk-scale/files/L00/: CMakeLists.txt
orchestrator/testdata/fdsdk-scale/files/L00/include/: L00.h
orchestrator/testdata/fdsdk-scale/files/L00/src/: L00.c
orchestrator/testdata/fdsdk-scale/files/L01/: CMakeLists.txt
orchestrator/testdata/fdsdk-scale/files/L01/include/: L01.h
orchestrator/testdata/fdsdk-scale/files/L01/src/: L01.c
orchestrator/testdata/fdsdk-scale/files/L02/: CMakeLists.txt
orchestrator/testdata/fdsdk-scale/files/L02/include/: L02.h
orchestrator/testdata/fdsdk-scale/files/L02/src/: L02.c
orchestrator/testdata/fdsdk-scale/files/L03/: CMakeLists.txt
orchestrator/testdata/fdsdk-scale/files/L03/include/: L03.h
orchestrator/testdata/fdsdk-scale/files/L03/src/: L03.c
orchestrator/testdata/fdsdk-scale/files/L04/: CMakeLists.txt
orchestrator/testdata/fdsdk-scale/files/L04/include/: L04.h
orchestrator/testdata/fdsdk-scale/files/L04/src/: L04.c
orchestrator/testdata/fdsdk-scale/files/L05/: CMakeLists.txt
orchestrator/testdata/fdsdk-scale/files/L05/include/: L05.h
orchestrator/testdata/fdsdk-scale/files/L05/src/: L05.c
orchestrator/testdata/fdsdk-scale/files/L06/: CMakeLists.txt
orchestrator/testdata/fdsdk-scale/files/L06/include/: L06.h
orchestrator/testdata/fdsdk-scale/files/L06/src/: L06.c
orchestrator/testdata/fdsdk-scale/files/L07/: CMakeLists.txt
orchestrator/testdata/fdsdk-scale/files/L07/include/: L07.h
orchestrator/testdata/fdsdk-scale/files/L07/src/: L07.c
orchestrator/testdata/fdsdk-scale/files/L08/: CMakeLists.txt
orchestrator/testdata/fdsdk-scale/files/L08/include/: L08.h
orchestrator/testdata/fdsdk-scale/files/L08/src/: L08.c
orchestrator/testdata/fdsdk-scale/files/L09/: CMakeLists.txt
orchestrator/testdata/fdsdk-scale/files/L09/include/: L09.h
orchestrator/testdata/fdsdk-scale/files/L09/src/: L09.c
scripts/: fdsdk-reality-check.sh  (+20 more)
testdata/meta-project/bazel-passthrough/sources/: BUILD.bazel  greet.c
(+715 files in other folders)
