"""Root module for the cmake-to-bazel envelope.

Downstream Bazel projects depend on this module via bazel_dep, then
invoke the converted_pkg_repo extension to materialize one Bazel repo
per orchestrator-converted FDSDK element. See
converted_pkg_repo.bzl's docstring for the consumer-side incantation.
"""

module(
    name = "cmake_to_bazel",
    version = "0.0.0",
    compatibility_level = 1,
)

# Required so converted_pkg_repo's extension-generated repos can
# `load("@rules_cc//cc:defs.bzl", ...)`. Without this declaration,
# the synthesized repos can't see rules_cc and Bazel reports
# "No repository visible as '@rules_cc'" at analysis time.
bazel_dep(name = "rules_cc", version = "0.2.17")
